# mishpocha

./: .gitignore  .gitleaks.toml  Justfile  README.md  compose-dev.yaml  compose.yaml  helpers.just  install_dependencies.sh
api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Justfile  dbschema  edgedb.toml
api/seed/date/: 1944-4-5.json  1947-3-8.json  1947-4-22.json
api/seed/instrument/: bass.json  drums.json  soprano-saxophone.json  tenor-saxophone.json
api/seed/person/: barry-guy.json  evan-parker.json  paul-lytton.json
api/seed/player/: barry-guy-bass.json  evan-parker-soprano-saxophone.json  evan-parker-tenor-saxophone.json  paul-lytton-drums.json
api/src/: main.rs  schema.rs
db/: .env.example  Dockerfile  Justfile  helpers.just  queries.just  seed-2.edgeql  seed.edgeql
db/dbschema/: default.esdl
db/dbschema/fixups/: m12x7nk55nexwofas3fhekonylbwxfgnzojimacof2o7emcg7vvvba-m1af5ir6evyjrosc6rylkjvyj2uxye2siiuiecc2xecd7ow3nngbsq.edgeql  m15gstjtv2gnbxaqvv7f2xvthhpqvtlyj7kgqyftty4lhumrc6d25a-m1yx3z2onf6jiotbyzlssit25nb2nnu4uegfb4cdix257c4jdn4uoq.edgeql  m1777aaqnz2uyxjyx6xidfyptkea7u2rik5h53gvuamitjizilh4ja-m1g6jfn45hye3ml6oq7ge53fbchbjazl4wvyppvii3nozcnvowu2ba.edgeql  m17ghc26duvra3p72izqi3xmod6udjzgym4kyyllfltgpgs2zkzqfa-m1wqt2tkbsdouzktuhd7dsiisrq5g2gotednptrvzmynfx5k5cgpqa.edgeql  (+18 more)
ui/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  Justfile  README.md  package.json  pnpm-lock.yaml  rome.json  tailwind.config.js  vite.config.ts
ui/src/: entry.vercel-edge.tsx  global.css  global.scss  root.tsx  schema.ts
ui/src/components/: header.tsx  (+4 more)
(+68 files in other folders)
