[package]
name = "mishpocha-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
edgedb-derive = "0.5.1"
edgedb-protocol = "0.6.0"
edgedb-tokio = "0.5.0"
env_logger = "0.10.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["serde"] }
