[package]
name = "mishpocha-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
color-eyre = "0.6.2"
edgedb-derive = "0.5.1"
edgedb-protocol = "0.6.0"
edgedb-tokio = "0.5.0"
env_logger = "0.10.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = "1.26.0"
uuid = { version = "1.4.1", features = ["serde"] }
